--- a/csh_demo1/build.gradle
+++ b/csh_demo1/build.gradle
@@ -32,4 +32,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.hjm:BottomTabBar:1.1.1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.squareup.picasso:picasso:2.5.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.1'
+
 }
